<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="viewModel"
            type="com.sathish.pmapp.project.AddProjectViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_white"
            app:title="@string/str_addProject"
            app:titleTextColor="@android:color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:contentDescription="@string/str_save"
                android:foregroundGravity="right"
                android:onClick="@{() -> viewModel.onSaveClick() }"
                android:src="@drawable/ic_save" />

        </androidx.appcompat.widget.Toolbar>


        <EditText
            android:id="@+id/edit_text_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/str_Project"
            android:inputType="text"
            android:text="@={viewModel.name}"

            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/str_prjDesc"
            android:text="@={viewModel.desc}"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_project" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>